--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700;800&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +9,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.title {
+  font-family: 'Poppins', sans-serif;
+  font-size: 70px;
+  font-weight: 800;
+  text-align: center;
+  margin: 0;
+  margin-top: 40px;
+}
+.subtitle {
+  font-family: 'Poppins', sans-serif;
+  font-size: 40px;
+  text-align: center;
+  font-weight: 200;
+  margin: 0;
+  padding: 0;
+  line-height: 50%;
 }
