--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;700;800&display=swap');
+@import "./global.scss";
 
 html {
   scroll-behavior: smooth;
@@ -14,6 +15,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: white;
   scrollbar-width: none;
+
 }
 body::-webkit-scrollbar {
   display: none;
@@ -22,6 +24,11 @@ body::-webkit-scrollbar {
 .TitleDiv {
   margin-left: 100px;
   padding-top: 150px;
+
+  @include mobile {
+    margin-left: 25px;
+    padding-top: 250px;
+  }
 }
 
 .title1 {
@@ -30,6 +37,10 @@ body::-webkit-scrollbar {
   font-weight: 800;
   margin: 0;
   line-height: 60%;
+
+  @include mobile {
+    font-size: 80px;
+  }
 }
 .title2 {
   color: white;
@@ -38,6 +49,10 @@ body::-webkit-scrollbar {
   margin: 0;
   line-height: 80%;
   margin-top: 20px;
+
+  @include mobile {
+    font-size: 80px;
+  }
 }
 .title3 {
   color: #888888;
@@ -46,6 +61,10 @@ body::-webkit-scrollbar {
   margin: 0;
   line-height: 80%;
   margin-top: 20px;
+
+  @include mobile {
+    font-size: 30px;
+  }
 }
 
 .subheading {
@@ -53,6 +72,10 @@ body::-webkit-scrollbar {
   font-weight: 800;
   text-align: center;
   font-size: 40px;
+
+  @include mobile {
+    font-size: 30px;
+  }
 }
 
 .desc {
@@ -68,6 +91,12 @@ body::-webkit-scrollbar {
   background-color: #232323;
   z-index: 2;
 
+  @include mobile {
+    padding: 0 0%;
+    width: 100%;
+    // background-color: #F26B4E;
+  }
+
 }
 .NavBarList {
   height: 100%;
@@ -76,6 +105,12 @@ body::-webkit-scrollbar {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  @include mobile {
+    // background-color: #888888; 
+    justify-content: space-around;
+    padding: 0;
+    width: 90%;
+  }
 }
 .NavBarList a {
   color: white;
