--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,26 @@ body {
   scrollbar-width: none;
 
 }
+// body::-webkit-scrollbar {
+//   // display: none;
+//   background-color: #ffffff;
+// }
+
 body::-webkit-scrollbar {
-  display: none;
+  width: 10px;
+  @include mobile {
+    display: none;
+  }
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #e4e4e400;
+  border-radius: 100px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 100px;
 }
 
 .TitleDiv {
