--- a/src/components/grid.scss
+++ b/src/components/grid.scss
@@ -1,3 +1,4 @@
+@import "../global.scss";
 .item {
     display: flex;
     align-items: center;
@@ -17,13 +18,16 @@
 img {
     transition: all .5s ease;
 }
-img:hover {
+.newImg:hover {
     opacity: 0%;
     z-index: 0;
   }
 .ImgTitle {
     position: absolute;
     pointer-events: none;
+    @include mobile {
+      font-size: small;
+    }
   }
 .newImg {
   width: 100%;
