--- a/src/index.scss
+++ b/src/index.scss
@@ -164,3 +164,43 @@ body::-webkit-scrollbar-thumb {
   /* background-color: blueviolet; */
   margin: 0 10px;
 }
+
+.testDiv {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  // background-color: aqua;
+  justify-content: center;
+  align-items: center;
+
+}
+.textDivInside {
+  display: flex;
+  // background-color: red;
+  justify-content: center;
+  align-items: center;
+  height: 80px
+}
+.letterDiv {
+  height: 100%;
+  // background-color: royalblue;
+  padding: 0;
+  padding-left: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  img {
+    border:0;
+  }
+}
+.letterLong {
+  background-color: white;
+  height: 80px;
+  width: 20px;
+}
+.letterWide {
+  background-color: white;
+  height: 20px;
+  width: 30px;
+}
