--- a/src/index.scss
+++ b/src/index.scss
@@ -24,27 +24,38 @@ body {
 
 body::-webkit-scrollbar {
   width: 10px;
+  overflow: overlay;
   @include mobile {
     display: none;
   }
 }
 
 body::-webkit-scrollbar-track {
+  overflow: overlay;
   background-color: #e4e4e400;
   border-radius: 100px;
 }
 
 body::-webkit-scrollbar-thumb {
+  overflow: overlay;
   background-color: #000000;
   border-radius: 100px;
 }
 
 .TitleDiv {
-  margin-left: 100px;
+  // margin-left: 100px;
+  padding-left: 100px;
   padding-top: 150px;
+  padding-bottom: 150px;
+  // b`ckground-color: black;
+  
+  // background-image: url('./images/backgrounds/background1.png');
+  // background-size: cover;
+  // background-position: center bottom;
 
   @include mobile {
-    margin-left: 25px;
+    // margin-left: 25px;
+    padding-left: 25px;
     padding-top: 250px;
   }
 }
@@ -149,15 +160,17 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   align-items: center;
   flex-direction: column;
-  scroll-snap-align: start;
   justify-content: center;
+  scroll-snap-align: start;
 }
 .PortfolioDiv {
   padding-top: 50px;
 }
 
 .App {
-  scroll-snap-type: y mandatory;
+  // scroll-snap-type: y mandatory;
+  // overflow-y: scroll;
+  // height: 100vh;
 }
 
 .ContactInnerDiv a {
@@ -203,4 +216,20 @@ body::-webkit-scrollbar-thumb {
   background-color: white;
   height: 20px;
   width: 30px;
+}
+.fade-in {
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease;
+	animation-duration: .3s;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
