--- a/src/index.scss
+++ b/src/index.scss
@@ -42,62 +42,10 @@ body::-webkit-scrollbar-thumb {
   border-radius: 100px;
 }
 
-.TitleDiv {
-  // margin-left: 100px;
-  padding-left: 100px;
-  padding-top: 150px;
-  padding-bottom: 150px;
-  // b`ckground-color: black;
-  
-  // background-image: url('./images/backgrounds/background1.png');
-  // background-size: cover;
-  // background-position: center bottom;
 
-  @include mobile {
-    // margin-left: 25px;
-    padding-left: 25px;
-    padding-top: 250px;
-  }
-}
-
-.title1 {
-  color: #888888;
-  font-size: 100px;
-  font-weight: 800;
-  margin: 0;
-  line-height: 60%;
-
-  @include mobile {
-    font-size: 80px;
-  }
-}
-.title2 {
-  color: white;
-  font-size: 120px;
-  font-weight: 800;
-  margin: 0;
-  line-height: 80%;
-  margin-top: 20px;
-
-  @include mobile {
-    font-size: 80px;
-  }
-}
-.title3 {
-  color: #888888;
-  font-size: 50px;
-  font-weight: 200;
-  margin: 0;
-  line-height: 80%;
-  margin-top: 20px;
-
-  @include mobile {
-    font-size: 30px;
-  }
-}
 
 .subheading {
-  color: #F26B4E;
+  color: $accentColor;
   font-weight: 800;
   text-align: center;
   font-size: 40px;
@@ -107,52 +55,6 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-.desc {
-  margin: 40px 20%;
-  text-align: center;
-}
-
-.NavBar {
-  height: 50px;
-  width: 40%;
-  padding: 0 30%;
-  position: fixed;
-  background-color: #232323;
-  z-index: 2;
-
-  @include mobile {
-    padding: 0 0%;
-    width: 100%;
-    // background-color: #F26B4E;
-  }
-
-}
-.NavBarList {
-  height: 100%;
-  /* background-color: blueviolet; */
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  @include mobile {
-    // background-color: #888888; 
-    justify-content: space-around;
-    padding: 0;
-    width: 90%;
-  }
-}
-.NavBarList a {
-  color: white;
-  width: 5%;
-  font-weight: 500;
-  font-size: small;
-  text-decoration: none;
-  
-}
-.NavBarListItem:hover{
-  color: #F26B4E;
-  /* font-weight: 800; */
-}
 .SectionDiv {
   margin-top: 150px;
   height: 100vh;
@@ -163,9 +65,7 @@ body::-webkit-scrollbar-thumb {
   justify-content: center;
   scroll-snap-align: start;
 }
-.PortfolioDiv {
-  padding-top: 50px;
-}
+
 
 .App {
   // scroll-snap-type: y mandatory;
@@ -173,50 +73,7 @@ body::-webkit-scrollbar-thumb {
   // height: 100vh;
 }
 
-.ContactInnerDiv a {
-  /* background-color: blueviolet; */
-  margin: 0 10px;
-}
 
-.testDiv {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  // background-color: aqua;
-  justify-content: center;
-  align-items: center;
-
-}
-.textDivInside {
-  display: flex;
-  // background-color: red;
-  justify-content: center;
-  align-items: center;
-  height: 80px
-}
-.letterDiv {
-  height: 100%;
-  // background-color: royalblue;
-  padding: 0;
-  padding-left: 10px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  img {
-    border:0;
-  }
-}
-.letterLong {
-  background-color: white;
-  height: 80px;
-  width: 20px;
-}
-.letterWide {
-  background-color: white;
-  height: 20px;
-  width: 30px;
-}
 .fade-in {
 	opacity: 1;
 	animation-name: fadeInOpacity;
